# Fagprojekt---Group-Equivariance

./: README.md
fag_projekt/: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
fag_projekt/.devcontainer/: devcontainer.json
fag_projekt/data/processed/: rotated_test_angles.pt  rotated_test_labels.pt  rotated_train_angles.pt  rotated_train_labels.pt
fag_projekt/dockerfiles/: api.dockerfile  train.dockerfile
fag_projekt/docs/: mkdocs.yaml
fag_projekt/docs/source/: index.md
fag_projekt/notebooks/: My_first_se2cnn.ipynb  NN_layers.py  functions.py  lifting_layer.ipynb
fag_projekt/src/group_equivariant_learning/: data.py  train.py
fag_projekt/tests/: test_data.py
