[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "group_equivariant_learning"
version = "0.0.1"
description = "Creating a group equivariant CNN"
authors = [
  { name = "group_2", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "deep learning", "group equivariance", "computer vision"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<3.0",
    "pillow>=10.0,<12.0",
    "ipykernel>=7.2.0",
    "torch>=2.5,<2.7",
    "torchvision>=0.20,<0.22",
    "typer>=0.15,<1.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "mypy==1.19.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]